--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2",
+    "sass": "^1.49.9",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
